objects/Request__c.object
<CustomObject>
    <description>Requests management for Change Request Management App.</description>
    <fields>
        <fullName>Business_Value__c</fullName>
        <label>Business Value Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Codes__c</fullName>
        <label># Codes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Complexity__c</fullName>
        <label>Complexity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Simple</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ESN_RQT_Assumptions__c</fullName>
        <description>Used in Realease Management App. Request Object.</description>
        <label>Assumptions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ESN_RQT_Feasibility__c</fullName>
        <description>Used in Release Management App. Request Object.</description>
        <label>Feasibility</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Complex</fullName>
                </value>
                <value>
                    <fullName>Currently Impossible</fullName>
                </value>
                <value>
                    <fullName>Easy</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Need Pre-Study</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESN_RQT_SFDC_Ideas_AppExchange_url__c</fullName>
        <description>Used in Release Management App. Request Object.</description>
        <label>SFDC Ideas/AppExchange url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ESN_RQT_Scheduled_Integration_Workload__c</fullName>
        <description>Used in Release Management App. Request Object.</description>
        <inlineHelpText>Man/days</inlineHelpText>
        <label>Scheduled Integration Workload</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ESN_RQT_Type__c</fullName>
        <description>Used in the Release Mangement App. Request Object.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Data &amp; Config</fullName>
                </value>
                <value>
                    <fullName>Feature</fullName>
                </value>
                <value>
                    <fullName>Integration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Functional_Charge__c</fullName>
        <label>Functional Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Promote_to_Production_Date__c</fullName>
        <formula>Release__r.Promote_to_Production_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Promote to Production Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Promote_to_Staging_Date__c</fullName>
        <formula>Release__r.Promote_to_Staging_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Promote to Staging Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipLabel>Requests</relationshipLabel>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Name__c</fullName>
        <label>Request Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Release__c</fullName>
        <inlineHelpText>Please, apply the Naming Convention.</inlineHelpText>
        <label>Target Release</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technical_Charge__c</fullName>
        <label>Technical Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Request_Name__c</columns>
        <columns>Priority__c</columns>
        <columns>Target_Release__c</columns>
        <columns>Release__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Requests</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Requests_Without_Release</fullName>
        <columns>NAME</columns>
        <columns>Request_Name__c</columns>
        <columns>Priority__c</columns>
        <columns>ESN_RQT_Feasibility__c</columns>
        <columns>Target_Release__c</columns>
        <columns>Release__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Release__c</field>
            <operation>equals</operation>
        </filters>
        <label>All Requests Without Release</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Requests</fullName>
        <columns>NAME</columns>
        <columns>Request_Name__c</columns>
        <columns>Priority__c</columns>
        <columns>Target_Release__c</columns>
        <columns>Release__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Description__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Requests</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Rq-{0000}</displayFormat>
        <label>Request Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requests</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>